objects/SVMXC__Case_Tracker__c.object
<CustomObject>
    <customHelpPage>SVMXC__SVMX_LaunchHelp</customHelpPage>
    <description>Object helps to track waiting periods encountered during the life cycle of a Case or Service Order.</description>
    <fields>
        <fullName>SVMXC__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User that owns the issue. Reference to standard user object.</description>
        <inlineHelpText>Name of the ServiceMax user responsible for tracking and resolving this issue.</inlineHelpText>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N70000001hzYXEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Case__c</fullName>
        <description>Reference to the support case in which issues are tracked</description>
        <inlineHelpText>Case number for which this issue is tracked.</inlineHelpText>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>R00N70000001hzYGEAY</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SVMXC__End_Date_Time__c</fullName>
        <description>Date and time when this issue was resolved.</description>
        <inlineHelpText>Date and time when this issue was resolved.</inlineHelpText>
        <label>End Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Issue_Area__c</fullName>
        <description>Broad area that identifies where the issue is.</description>
        <inlineHelpText>Broad area that identifies where the issue/bottleneck is.</inlineHelpText>
        <label>Issue Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Case</fullName>
                </value>
                <value>
                    <fullName>Work Order</fullName>
                </value>
                <value>
                    <fullName>ERP</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Documentation</fullName>
                </value>
                <value>
                    <fullName>Process</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Issue_Description__c</fullName>
        <description>Detailed description of the issue/bottleneck.</description>
        <inlineHelpText>Detailed description of the issue/bottleneck.</inlineHelpText>
        <label>Issue Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SVMXC__Issue_Subcategory__c</fullName>
        <description>Classification of the issue within an issue area.</description>
        <inlineHelpText>Classification of the issue within an issue area.</inlineHelpText>
        <label>Issue Subcategory</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SVMXC__Issue_Area__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Wrong Information</fullName>
                </value>
                <value>
                    <fullName>Need Review</fullName>
                </value>
                <value>
                    <fullName>Need Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__RMA_Shipment_Ref__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>RMA or Shipment linked to this process bottleneck. Reference to an existing Parts Order record in ServiceMax</description>
        <label>Parts Order Reference</label>
        <referenceTo>SVMXC__RMA_Shipment_Order__c</referenceTo>
        <relationshipName>Case_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Service_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Service order number connected to this issue. Is a lookup to an existing service order in ServiceMax</description>
        <inlineHelpText>Service order number connected to this issue. Is a lookup to an existing service order in ServiceMax</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipName>Case_Tracker</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SVMXC__Start_Date_Time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Date and time when this issue/bottleneck started</description>
        <inlineHelpText>Date and time when this issue/bottleneck started</inlineHelpText>
        <label>Start Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SVMXC__Waiting_On_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Name of the customer contact responsible for resolving this issue.</description>
        <inlineHelpText>Name of the customer contact responsible for resolving this issue.</inlineHelpText>
        <label>Waiting On Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N70000001hzZFEAY</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Process Bottleneck</label>
    <nameField>
        <displayFormat>CT-{000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Process Bottlenecks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>